--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ python = "^3.8"
 python-dotenv = "^0.15.0"
 Flask = "^1.1.2"
 requests = "^2.25.1"
+google-api-python-client = "^2.0.2"
+youtube-dl = "^2021.3.3"
+DiscordUtils = "^1.3.4"
+discord-components = "^0.5.3"
+# discord-buttons = "^0.5"
+PyNaCl = "^1.4.0"
+markupsafe ="2.0.1"
 
 [tool.poetry.dev-dependencies]
 
